Создано с помощью Colaboratory

--- a/Stepik_fundamentals_of_statistics_notes.ipynb
+++ b/Stepik_fundamentals_of_statistics_notes.ipynb
@@ -13,6 +13,9 @@
         "\n",
         "Автор лекций: ** Анатолий Карпов**\n",
         "\n",
+        "Основа конспекта — работа Михаила Курочкина (за что ему огромное спасибо)\n",
+        "https://github.com/KlukvaMors/basic_stat/\n",
+        "\n",
         "\n",
         "<img src=\"https://github.com/KlukvaMors/basic_stat/blob/main/img/Saint_Karpov.png?raw=1\" width=400>"
       ]
