Создано с помощью Colaboratory

--- a/Stepik_fundamentals_of_statistics_notes.ipynb
+++ b/Stepik_fundamentals_of_statistics_notes.ipynb
@@ -722,7 +722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "uEf19XxvTd81",
         "outputId": "0c6db658-93ae-400d-90f7-c975602734e2",
@@ -780,7 +780,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "KBjvmZSZTd82",
         "outputId": "9d2b9be3-22f5-4d4f-b303-76aee10fe57c",
@@ -818,7 +818,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "tjkP_smjTd82",
         "outputId": "f79b2a9e-e225-435c-e238-4b40a4b474fc",
@@ -844,7 +844,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "tnIYY16aTd83",
         "outputId": "acabf004-7054-48b9-c5c0-97b6c360087f",
@@ -1270,7 +1270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "yl9hHRjzTd9B",
         "outputId": "8c0729bc-d218-49e8-a28a-6ce76fbbad21",
@@ -1648,7 +1648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "k6r8lgHiTd9H",
         "outputId": "c72c4c77-d863-4627-d360-c098c9b1070c",
@@ -1701,6 +1701,24 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# U-критерий Манна-Уитни\n",
+        "К большому сожалению, поскольку формула t-критерия включает в себя средние значения, то этот критерий будет давать неадекватные результаты при наличии котиков и песиков аномальных размеров (т. е. выбросов). \n",
+        "\n",
+        "Чтобы этого избежать, вы можете либо исключить эти выбросы из анализа, либо воспользоваться непараметрическим U-критерием Манна-Уитни . Этот критерий, кстати, используется и в тех ситуациях, когда точные значения элементов в выборке нам не известны.\n",
+        "Чтобы рассчитать критерий Манна-Уитни, необходимо выстроить все элементы в один ряд, от самого мелкого к самому крупному, и назначить им ранги. Самому большому элементу достанется первый ранг, а самому маленькому – последний.\n",
+        "\n",
+        "После этого мы снова делим их на две выборки и считаем суммы рангов отдельно для первой и для второй. Общая логика такова: чем сильнее будут различаться эти суммы, тем больше различаются выборки\n",
+        "\n",
+        "### Пример\n",
+        "<img src='https://raw.githubusercontent.com/betelgeus/fundamentals_of_statistics_notes/main/img/Снимок%20экрана%202022-09-07%20в%2014.40.05.png' width='400px'>"
+      ],
+      "metadata": {
+        "id": "rc5daLdmvCcU"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "IAqbiaz9Td9H"
       },
@@ -1714,6 +1732,9 @@
         "$$ SS_{between} = \\sum_{j=1}^{p}{n_j{(\\bar{x}_j - \\bar{x})^2}} $$\n",
         "$$ SS_{within} = \\sum_{j=1}^{p}{\\sum_{i=1}^{n_j}{(x_{ij} - \\bar{x}_j)^2}} $$\n",
         "\n",
+        "### Пример\n",
+        "<img src='https://raw.githubusercontent.com/betelgeus/fundamentals_of_statistics_notes/fcc90a9eb085eb8948b3287a8152b9452ba3340b/img/Снимок%20экрана%202022-09-07%20в%2014.16.35.png' with='600px'/>\n",
+        "\n",
         "\n",
         "\n",
         "Когда мы делим значение межгрупповой суммы квадратов на соответствующее число степеней свободы (число групп минус один), мы тем самым усредняем полученный показатель. Усредненное значение межгрупповой суммы квадратов называется межгрупповым средним квадратом  \n",
@@ -1721,17 +1742,24 @@
         "$$ MS_{between} = \\frac{SSB}{DF_{between}}$$\n",
         "\n",
         "$$df_{between} = m - 1$$\n",
-        "где m это размер выборки\n",
+        "где m это количество групп\n",
+        "\n",
         "\n",
         "Отношение внутригрупповой суммы квадратов к соответствующему числу степеней свободы (число всех наблюдений минус число групп) — это внутригрупповой средний квадрат \n",
         "\n",
         "$$ MS_{within} = \\frac{SSW}{DF_{within}}$$\n",
         "\n",
         "$$df_{within} = N - m$$\n",
+        "где N это количество всех элементов во всех выборках \n",
         "\n",
         "Поэтому формула F-значения (F-отношение) часто записывается:\n",
         "\n",
-        "$$F = \\frac{MS_{between}}{MS_{within}}$$"
+        "$$F = \\frac{MS_{between}}{MS_{within}}$$\n",
+        "\n",
+        "\n",
+        "**F-критерий равенства дисперсий Фишера**\n",
+        "$$F_{Фишера} = \\frac{σ_{большая}^2}{σ_{меньшая}^2}$$\n",
+        "помогает найти ответ насколько различаются между собой разнообразие первой выборки и второй выборки "
       ]
     },
     {
@@ -1802,6 +1830,47 @@
         "else:\n",
         "    print('НЕ отклоняем нулевую гипотезу')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Распределение Фишера\n",
+        "Теоретическое распределение F-значения в дисперсионном анализе не является нормальным, а подчиняется распределению Фишера (F distribution). \n",
+        "\n",
+        "Форма распределения зависит от числа степеней свободы (то есть от количества групп и общего числа наблюдений). \n",
+        "\n",
+        "F-значение всегда является положительным, поэтому, в отличие от t-критерия, мы рассчитываем вероятность отклонения только в правую сторону. \n"
+      ],
+      "metadata": {
+        "id": "A0aOwgdnxxdm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "### Задача\n",
+        "Допустим, что при сравнении четырех групп между собой (по 5 наблюдений в каждой группе) вы получили F = 3.5. Чему будет равен p-value? Подтверждена ли 0 гипотеза?\n",
+        "\n",
+        "**Решение**\n",
+        "\n",
+        "Предположим, что верна нулевая гипотеза H0 и, что все четыре выборки (по пять наблюдений в каждой) взяты из одной генеральной совокупности. \n",
+        "\n",
+        "Нам нужно оценить в скольких случаях из множества экспериментов по извлечению случайным образом 4 групп по 5 значений в каждой - мы будем получать такое F-значение (такое соотношение различий между группами и внутри групп - SSB/SSB).\n",
+        "\n",
+        "Число степеней свободы (dfSSB) для межгрупповой суммы квадратов (SSB) у нас будет равно \"количество групп - 1\" = 4 - 1 = 3. \n",
+        "\n",
+        "Число степеней свободы (dfSSW) для суммы квадратов внутри групп (SSW) у нас будет равно \"количество групп * (количество элементов в каждой группе-1)\" или \"общее количество наблюдений - количество групп\" = 4 * (5-1) = 16.\n",
+        "\n",
+        "Задав эти значения (dfSSB -> df-1 и dfSSW -> df-2) в калькуляторе (определив форму F-кривой) и полученное F-значение (a), получим вероятность получить такое значение при многократных повторениях эксперимента (p-value):\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/betelgeus/fundamentals_of_statistics_notes/main/img/Снимок%20экрана%202022-09-07%20в%2014.55.19.png' width='600px'/>\n",
+        "\n",
+        "p-value менее 5%, отклоняем H0."
+      ],
+      "metadata": {
+        "id": "nKQwcjivzKHX"
+      }
     },
     {
       "cell_type": "markdown",
