Создано с помощью Colaboratory

--- a/Stepik_fundamentals_of_statistics_notes.ipynb
+++ b/Stepik_fundamentals_of_statistics_notes.ipynb
@@ -1882,10 +1882,9 @@
         "\n",
         "В отличие от t-критерия, позволяет сравнивать средние значения трёх и более групп. Разработан Р. Фишером для анализа результатов экспериментальных исследований. В литературе также встречается обозначение **ANOVA** (от англ. **AN**alysis **O**f **VA**riance) - дисперсионный анализ\n",
         "\n",
-        "### почему мы не можем применить t-критерий для более двух выборок\n",
-        "**применяя его попарно к каждой выбрке**\n",
+        "**Почему мы не можем применить t-критерий для более двух выборок применяя его попарно к каждой выбрке?**\n",
         "\n",
-        "Чтобы выяснить это, сделаем эксперемент."
+        "Чтобы выяснить это, сделаем эксперемент:"
       ]
     },
     {
@@ -1988,6 +1987,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Формула расчета количества парных сравнений выборок\n",
+        "\n",
+        "$$k = \\frac{M * (M - 1)}{2}$$\n",
+        "где M количество выборок"
+      ],
+      "metadata": {
+        "id": "ew-dVl3mTXai"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Поправка Бонферрони\n",
+        "\n",
+        "$$\\frac {0,05}{k}$$\n",
+        "где k — количество парных сравнений, 0,05 — p-value\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5XM1sHr2Ul_s"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -2023,11 +2047,297 @@
         "id": "lQlDrtNoTd9K"
       },
       "source": [
-        "Однако в данном случае эта будет арх-консервативная корректировавка, которая имеет меньше вероятность найти реальные значения. По сути мы **уменьшаем шанс получить ошибку I рода, но увеличиваем шанс на ошибку II рода**.\n",
+        "Поправка Бонферрони критикуется за ее черезмерную консервативность, которая значительно снижает шанс найти реальные значимые различия \n",
+        "\n",
+        "Однако в данном случае эта будет архконсервативная корректировка, которая имеет меньше вероятность найти реальные значения. По сути мы **уменьшаем шанс получить ошибку I рода, но увеличиваем шанс на ошибку II рода**.\n",
         "\n",
         "### Ошибки первого и второго рода\n",
         "\n",
+        "Оши́бка пе́рвого ро́да (α-ошибка, ложноположительное заключение) — ситуация, когда отвергнута верная нулевая гипотеза (об отсутствии связи между явлениями или искомого эффекта).\n",
+        "\n",
+        "Оши́бка второ́го ро́да (β-ошибка, ложноотрицательное заключение) — ситуация, когда принята неверная нулевая гипотеза.\n",
+        "\n",
         "<img src='https://github.com/KlukvaMors/basic_stat/blob/main/img/error_types.jpeg?raw=1'/>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Критерий Тьюки\n",
+        "Критерий Тьюки используется для проверки нулевой гипотезы H0:μB=μA против альтернативной гипотезы HA:μB≠μA, где индексы A и B обозначают любые две сравниваемые группы. При наличии m групп всего возможно выполнить: \n",
+        "$$\\frac{m * (m-1)}{2} $$\n",
+        "попарных сравнений.\n",
+        "\n",
+        "Первый шаг заключается в упорядочивании всех имеющихся групповых средних значений по возрастанию (от 1 до m). Далее выполняют попарные сравнения этих средних так, что сначала сравнивают наибольшее среднее с наименьшим, т.е. \n",
+        "m-ое с 1-ым, затем m-ое со 2-ым, 3-м, и т.д. вплоть до (m−1)-го. \n",
+        "\n",
+        "Затем предпоследнее среднее, (m−1)-ое, тем же образом сравнивают с 1-ым, 2-ым, и т.д. до (m−2)-го. Эти сравнения продолжаются до тех пор, пока не будут перебраны все пары.\n",
+        "\n",
+        "Указанные сравнения выполняются при помощи критерия Тьюки, который представляет собой модифицированный критерий Стьюдента:\n",
+        "$$q = \\frac{\\bar{x}_{B}-\\bar{x}_{A}}{SE} $$\n",
+        "\n",
+        "Отличие от критерия Стьюдента заключается в том, как рассчитывается стандартная ошибка \n",
+        "$$SE = \\sqrt{\\frac{MS_{within}}{n}}$$, где MSwithin рассчитываемая в ходе дисперсионного анализа внутригрупповая дисперсия, n количество наблюдений в выборке. \n",
+        "\n",
+        "Приведенная формула для критерия Тьюки верна для случаев, когда все сравниваемые группы содержат одинаковое число наблюдений, n. Если сравниваемые группы неодинаковы по размеру, стандартная ошибка будет рассчитываться следующим образом:\n",
+        "$$SE = \\sqrt{\\frac{MS_{within}}{2}(\\frac{1}{n_{B}}+ \\frac{1}{n_{A}})}$$\n",
+        "\n",
+        "Благодаря тому обстоятельству, что в приведенные выше формулы стандартной ошибки входит внутригрупповая дисперсия MSwithin, обеспечивается контроль над групповой вероятностью ошибки первого рода. Именно это делает критерий Тьюки подходящим критерием для выполнения большого числа попарных сравнений групповых средних.\n",
+        "\n",
+        "Проверяемые нулевые гипотезы принимают или отвергают либо путем сравнения получаемых значений критерия q с определенным критическим значением для выбранного уровня значимости, либо рассчитывая соответствующие Р-значения. \n"
+      ],
+      "metadata": {
+        "id": "ra_akTOAYcR_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Пример\n",
+        "<img src='https://raw.githubusercontent.com/betelgeus/fundamentals_of_statistics_notes/main/img/Снимок%20экрана%202022-09-07%20в%2018.22.04.png' width='800 px'>"
+      ],
+      "metadata": {
+        "id": "boYZ_HQ1jH1n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy import stats\n",
+        "import itertools\n",
+        "import math\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from scipy.stats import studentized_range\n",
+        "\n",
+        "URL = 'https://stepik.org/media/attachments/lesson/8083/genetherapy.csv'\n",
+        "data = pd.read_csv(URL)\n",
+        "\n",
+        "def ssdev( xs ):\n",
+        "    mu = xs.mean() \n",
+        "    square_deviation = lambda x : (x - mu) ** 2 \n",
+        "    return sum( map(square_deviation, xs) )\n",
+        "\n",
+        "\n",
+        "SSW = sum(data.groupby('Therapy').apply(lambda g: ssdev(np.array(g)))) \n",
+        "# Out: 1302.2666666666669\n",
+        "\n",
+        "dfSSW = len(data.expr) - len(data.Therapy.unique()) # Out: 56\n",
+        "MSw = SSW/dfSSW # Out: 186.90555556\n",
+        "SE = math.sqrt(MSw/15) #Out: 1.2451174509525864\n",
+        "\n",
+        "combinations = list(itertools.combinations(data.Therapy.unique(), 2))\n",
+        "#Out: [('A', 'B'), ('A', 'C'), ('A', 'D'), ('B', 'C'), ('B', 'D'), ('C', 'D')]\n",
+        "\n",
+        "n_group = len(data.Therapy.unique()) #Out: 4\n",
+        "dfSSW = len(data.expr) - len(data.Therapy.unique()) #Out:56\n",
+        "\n",
+        "\n",
+        "alpha = 0.05\n",
+        "q_crit = studentized_range.ppf(1-alpha, n_group, dfSSW) # Out: 3.7446781868177195\n",
+        "\n",
+        "df = pd.DataFrame(columns=[f'{first} - {second}' for first, second in combinations], \n",
+        "                 index=['q','meandiff','p-adj','lower','upper'])\n",
+        "\n",
+        "means = data.groupby('Therapy').mean().T\n",
+        "\n",
+        "for first, second in combinations:\n",
+        "    key = f'{first} - {second}'\n",
+        "    first_second_mean = [means[first].expr, means[second].expr]\n",
+        "    _q = (max(first_second_mean) - min(first_second_mean))/SE\n",
+        "    _meandiff = (means[second].expr - means[first].expr)\n",
+        "    df[key]['q'] = _q\n",
+        "    df[key]['meandiff'] = _meandiff\n",
+        "    df[key]['p-adj'] = 1-studentized_range.cdf(_q, n_group, dfSSW)\n",
+        "    df[key]['upper'] = _meandiff+ q_crit*SE\n",
+        "    df[key]['lower'] = _meandiff- q_crit*SE\n",
+        "\n",
+        "df.T"
+      ],
+      "metadata": {
+        "id": "JEe5nURih5Ri",
+        "outputId": "716fa0ed-577d-451f-927a-42761d703a8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "              q  meandiff     p-adj      lower     upper\n",
+              "A - B  0.749595 -0.933333   0.95142  -5.595897  3.729231\n",
+              "A - C  4.283398 -5.333333  0.018886  -9.995897 -0.670769\n",
+              "A - D  5.943214      -7.4  0.000542 -12.062564 -2.737436\n",
+              "B - C  3.533803      -4.4  0.071041  -9.062564  0.262564\n",
+              "B - D   5.19362 -6.466667  0.002944 -11.129231 -1.804103\n",
+              "C - D  1.659817 -2.066667  0.645794  -6.729231  2.595897"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-6340330f-56cf-4a5e-8c7a-9d747f9cc357\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>q</th>\n",
+              "      <th>meandiff</th>\n",
+              "      <th>p-adj</th>\n",
+              "      <th>lower</th>\n",
+              "      <th>upper</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>A - B</th>\n",
+              "      <td>0.749595</td>\n",
+              "      <td>-0.933333</td>\n",
+              "      <td>0.95142</td>\n",
+              "      <td>-5.595897</td>\n",
+              "      <td>3.729231</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>A - C</th>\n",
+              "      <td>4.283398</td>\n",
+              "      <td>-5.333333</td>\n",
+              "      <td>0.018886</td>\n",
+              "      <td>-9.995897</td>\n",
+              "      <td>-0.670769</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>A - D</th>\n",
+              "      <td>5.943214</td>\n",
+              "      <td>-7.4</td>\n",
+              "      <td>0.000542</td>\n",
+              "      <td>-12.062564</td>\n",
+              "      <td>-2.737436</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>B - C</th>\n",
+              "      <td>3.533803</td>\n",
+              "      <td>-4.4</td>\n",
+              "      <td>0.071041</td>\n",
+              "      <td>-9.062564</td>\n",
+              "      <td>0.262564</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>B - D</th>\n",
+              "      <td>5.19362</td>\n",
+              "      <td>-6.466667</td>\n",
+              "      <td>0.002944</td>\n",
+              "      <td>-11.129231</td>\n",
+              "      <td>-1.804103</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>C - D</th>\n",
+              "      <td>1.659817</td>\n",
+              "      <td>-2.066667</td>\n",
+              "      <td>0.645794</td>\n",
+              "      <td>-6.729231</td>\n",
+              "      <td>2.595897</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6340330f-56cf-4a5e-8c7a-9d747f9cc357')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-6340330f-56cf-4a5e-8c7a-9d747f9cc357 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-6340330f-56cf-4a5e-8c7a-9d747f9cc357');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
       ]
     },
     {
