Создано с помощью Colaboratory

--- a/Stepik_fundamentals_of_statistics_notes.ipynb
+++ b/Stepik_fundamentals_of_statistics_notes.ipynb
@@ -1727,6 +1727,18 @@
         "\n",
         "Рассмотренный ранее **t-критерий Стьюдента** (равно как и его непараметрические аналоги) предназначен для сравнения исключительно **двух совокупностей**. В таком случае мы можем применять однофакторный дисперсионный анализ.  Та переменная, которая будет разделять наших испытуемых или наблюдения на группы (номинативная переменная с нескольким градациями) называется **независимой переменной**. А та количественная переменная, по степени выраженности которой мы сравниваем группы, называется **зависимая переменная**. \n",
         "\n",
+        "**Термины**\n",
+        "\n",
+        "SST — total summ of square, общая сумма квадратов\n",
+        "\n",
+        "SSB — summ of square between groups, сумма квадратов между группами (выборками)\n",
+        "\n",
+        "SSW — summ of square цшершт groups, сумма квадратов внутри групп (выборок)\n",
+        "\n",
+        "MS — mean square, средний квадрат, отношение суммы квадратов к числу их степеней свободы \n",
+        "\n",
+        "MSE — mean squared error, среднеквадратическая ошибка\n",
+        "\n",
         "\n",
         "$$ SS_{total} = \\sum_{j=1}^{p}{\\sum_{i=1}^{n_j}{(x_{ij} - \\bar{x})^2}} = SS_{between} + SS_{within} $$\n",
         "$$ SS_{between} = \\sum_{j=1}^{p}{n_j{(\\bar{x}_j - \\bar{x})^2}} $$\n",
@@ -1735,7 +1747,9 @@
         "### Пример\n",
         "<img src='https://raw.githubusercontent.com/betelgeus/fundamentals_of_statistics_notes/fcc90a9eb085eb8948b3287a8152b9452ba3340b/img/Снимок%20экрана%202022-09-07%20в%2014.16.35.png' with='600px'/>\n",
         "\n",
-        "\n",
+        "**Интересное наблюдение**\n",
+        "- Если основной вклад в SST делает SSB, то мы можем сделать вывод, что значимые различия наблюдаются между группами\n",
+        "- Если основной вклад в SST делает SSW, то мы можем сделать вывод, что значимы различия внутри групп\n",
         "\n",
         "Когда мы делим значение межгрупповой суммы квадратов на соответствующее число степеней свободы (число групп минус один), мы тем самым усредняем полученный показатель. Усредненное значение межгрупповой суммы квадратов называется межгрупповым средним квадратом  \n",
         "\n",
@@ -2155,12 +2169,12 @@
         "df.T"
       ],
       "metadata": {
-        "id": "JEe5nURih5Ri",
-        "outputId": "716fa0ed-577d-451f-927a-42761d703a8e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        }
+        },
+        "id": "JEe5nURih5Ri",
+        "outputId": "716fa0ed-577d-451f-927a-42761d703a8e"
       },
       "execution_count": 8,
       "outputs": [
@@ -2346,7 +2360,28 @@
         "id": "i6lExSc-Td9K"
       },
       "source": [
-        "## Многофакторный ANOVA\n"
+        "## Многофакторный ANOVA\n",
+        "**Простыми словами на примере котиков, песиков и слоников**\n",
+        "\n",
+        "На размер животного может влиять несколько факторовов, например: вид и питание.При этом на котиков, песиков и слоников фактор питания может влиять по-разному. Так, мясная диета будет очень нравиться котикам и песикам, в то время как слоники от нее загрустят и будут голодать.\n",
+        "\n",
+        "Чтобы разобраться во всех этих влияниях, статистики пользуются многофакторным дисперсионным анализом. Простейший из них – двухфакторный – разбивает дисперсию на четыре части. Первая отвечает за влияние вида на размер, вторая – за влияние диеты, третья – за взаимодействие этих факторов.\n",
+        "\n",
+        "Проверяем мы три нулевые гипотезы.\n",
+        "1. Биологический вид не связан с размером. \n",
+        "2. Диета не связана с размером.\n",
+        "3. Диета действует на всех животных одинаково.\n",
+        "\n",
+        "<img src=\"https://raw.githubusercontent.com/betelgeus/fundamentals_of_statistics_notes/main/img/Снимок%20экрана%202022-09-08%20в%2011.01.39.png\" width=\"400px\">\n",
+        "\n",
+        "Для интерпретации результатов двухфакторного дисперсионного анализа легче всего воспользоваться графиком выше. Он отражает и средние значения, и дисперсию, и влияние каждого фактора, и их взаимодействие.\n",
+        "В частности из этого графика мы можем сделать следующие выводы.\n",
+        "1. В среднем самые большие животные – слоники, а самые маленькие – котики.\n",
+        "2. Диета по-разному влияет на животных в зависимости от вида. Котики, будучи облигатными хищниками, лучше растут при мясной диете, слоники – наоборот, а вот песикам по большому счету все равно, что есть.\n",
+        "3. Если не учитывать влияние вида, то разные формы диеты не влияют на средний размер животных.\n",
+        "Если бы такое влияние существовало, то и котики, и песики, и слоники вырастали бы больше при употреблении мяса, чем при употреблении капусты.\n",
+        "Дисперсионные анализы для трех и более факторов строятся подобным образом: мы проверяем влияние каждого фактора, а также все возможные взаимодействия между ними.\n",
+        "\n"
       ]
     },
     {
