Создано с помощью Colaboratory

--- a/Stepik_fundamentals_of_statistics_notes.ipynb
+++ b/Stepik_fundamentals_of_statistics_notes.ipynb
@@ -1723,7 +1723,7 @@
         "id": "IAqbiaz9Td9H"
       },
       "source": [
-        "## Однофакторный дисперсионный анализ\n",
+        "## Однофакторный дисперсионный анализ (One-Way ANOVA)\n",
         "\n",
         "Рассмотренный ранее **t-критерий Стьюдента** (равно как и его непараметрические аналоги) предназначен для сравнения исключительно **двух совокупностей**. В таком случае мы можем применять однофакторный дисперсионный анализ.  Та переменная, которая будет разделять наших испытуемых или наблюдения на группы (номинативная переменная с нескольким градациями) называется **независимой переменной**. А та количественная переменная, по степени выраженности которой мы сравниваем группы, называется **зависимая переменная**. \n",
         "\n",
@@ -1731,9 +1731,9 @@
         "\n",
         "SST — total summ of square, общая сумма квадратов\n",
         "\n",
-        "SSB — summ of square between groups, сумма квадратов между группами (выборками)\n",
+        "SSB — sum of square between groups, сумма квадратов между группами (выборками)\n",
         "\n",
-        "SSW — summ of square цшершт groups, сумма квадратов внутри групп (выборок)\n",
+        "SSW — sum of square within groups, сумма квадратов внутри групп (выборок)\n",
         "\n",
         "MS — mean square, средний квадрат, отношение суммы квадратов к числу их степеней свободы \n",
         "\n",
