Создано с помощью Colaboratory

--- a/Stepik_fundamentals_of_statistics_notes.ipynb
+++ b/Stepik_fundamentals_of_statistics_notes.ipynb
@@ -788,6 +788,10 @@
         "$$ se = \\frac{sd}{\\sqrt{N}} $$\n",
         "\n",
         "Стандартная ошибка среднего - это среднеквадратическое отклонение распределения выборочных средних\n",
+        "\n",
+        "Хорошо про se и sd: https://www.scribbr.com/statistics/standard-error/\n",
+        "\n",
+        "\n",
         "### 4.Примеры\n",
         "Проверим на практике все эти законы."
       ]
