Создано с помощью Colaboratory

--- a/Stepik_fundamentals_of_statistics_notes.ipynb
+++ b/Stepik_fundamentals_of_statistics_notes.ipynb
@@ -82,9 +82,7 @@
         " - [Однофакторный дисперсионный анализ](#Однофакторный-дисперсионный-анализ)\n",
         " - [Множественные сравнения в ANOVA](#Множественные-сравнения-в-ANOVA)\n",
         "     - [почему мы не можем применить t-критерий для более двух выборок](#почему-мы-не-можем-применить-t-критерий-для-более-двух-выборок)\n",
-        " - [Многофакторный ANOVA](#Многофакторный-ANOVA)\n",
-        " - [](#)\n",
-        "  "
+        " - [Многофакторный ANOVA](#Многофакторный-ANOVA)\n"
       ]
     },
     {
@@ -109,11 +107,6 @@
         "     - [Пример расчёта и визуализации множественной регрессии](#Пример-расчёта-и-визуализации-множественной-регрессии)\n",
         " - [Выбор наилучшей модели](#Выбор-наилучшей-модели)\n",
         " - [Классификация: логистическая регрессия и кластерный анализ](#Классификация:-логистическая-регрессия-и-кластерный-анализ)\n",
-        " - [](#)\n",
-        " - [](#)\n",
-        " - [](#)\n",
-        "   \n",
-        " \n",
         " \n",
         "\n",
         "[Полезные ссылки](#Полезные-ссылки)"
@@ -2785,7 +2778,11 @@
         "$$ cov(X, Y) = \\frac{\\sum{(x_i - \\bar{x})(y_i - \\bar{x})}}{N - 1} $$\n",
         "где N - количество случайных величин, а единица - количество степеней свободы.\n",
         "\n",
-        "Однако только по **абсолютному** значению ковариации **нельзя судить** о том, **насколько сильно величины взаимосвязаны**, так как масштаб ковариации зависит от их дисперсий. Значение ковариации можно нормировать, поделив её на произведение среднеквадратических отклонений (квадратных корней из дисперсий) случайных величин. Полученная величина называется коэффициентом корреляции Пирсона, который всегда находится в интервале от −1 до 1:"
+        "\n",
+        "### Линейный коэффициент корреляции Пирсона\n",
+        "Однако только по **абсолютному** значению ковариации **нельзя судить** о том, **насколько сильно величины взаимосвязаны**, так как масштаб ковариации зависит от их дисперсий. Значение ковариации можно нормировать, поделив её на произведение среднеквадратических отклонений (квадратных корней из дисперсий) случайных величин. Полученная величина называется коэффициентом корреляции Пирсона.\n",
+        "\n",
+        "Коэффициент корреляции показывает тесноту линейной взаимосвязи и изменяется в диапазоне от -1 до 1. -1 (минус один) означает полную (функциональную) линейную обратную взаимосвязь. 1 (один) – полную (функциональную) линейную положительную взаимосвязь. 0 – отсутствие линейной корреляции (но не обязательно взаимосвязи). На практике всегда получаются промежуточные значения. \n"
       ]
     },
     {
