--- a/Stepik_fundamentals_of_statistics_notes.ipynb
+++ b/Stepik_fundamentals_of_statistics_notes.ipynb
@@ -3026,7 +3026,7 @@
     "Допустим, y1, y2, y3, yn — это фактические значения переменной на оси y графика. Опишем значение y функцией y = f(x), тогда:\n",
     "e1 = (y1 - f(x1))^2 и т.д.\n",
     "\n",
-    "$$\\sum e_i ^ 2 = (y_i - f(x_i)^2$$\n",
+    "$$\\sum e_i ^ 2 = \\sum(y_i - f(x_i)^2$$\n",
     "\n",
     "\n",
     "**Формула расчета оптимальных значений b1 и b0 для наилучшей регрессионной прямой:**\n",
