--- a/Stepik_fundamentals_of_statistics_notes.ipynb
+++ b/Stepik_fundamentals_of_statistics_notes.ipynb
@@ -3128,6 +3128,12 @@
     "$$SSres = \\sum(y_i - f(x_i)^2$$\n",
     "$$SStotal = \\sum(y_i - \\bar{y})^2$$\n",
     "\n",
+    "**Скоррректированный коэффициент детерминации**\n",
+    "Для того, чтобы была возможность сравнивать модели с разным числом факторов так, чтобы число регрессоров (факторов) не влияло на статистику R2\n",
+    "обычно используется скорректированный коэффициент детерминации, в котором используются несмещённые оценки дисперсий:\n",
+    "$$R^2adj = \\frac{SSres/(n-k)}{SStotal/(n-1)}$$\n",
+    "который даёт штраф за дополнительно включённые факторы, где n — количество наблюдений, а k — количество параметров\n",
+    "\n",
     "<img src=\"https://raw.githubusercontent.com/betelgeus/fundamentals_of_statistics_notes/main/img/Снимок%20экрана%202022-09-26%20в%2016.21.46.png\" width=\"1000px\"/>\n",
     "\n"
    ]
