--- a/Stepik_fundamentals_of_statistics_notes.ipynb
+++ b/Stepik_fundamentals_of_statistics_notes.ipynb
@@ -3008,6 +3008,8 @@
     "$$e_1 = y_1 - \\hat{y}$$\n",
     "$$\\sum e_i ^ 2$$\n",
     "где, e — остаток, y1 — реальное значение, ^y - прогноз\n",
+    "$$SSres = \\sum(y_i - \\hat{y})^2$$\n",
+    "$$\\hat{y} = f(x_i)$$\n",
     "\n",
     "Допустим, y1, y2, y3, yn — это фактические значения переменной на оси y графика. Опишем значение y функцией y = f(x), тогда:\n",
     "e1 = (y1 - f(x1))^2 и т.д.\n",
@@ -3113,7 +3115,7 @@
     "\n",
     ", где SSres — это сумма квадратов остатков (ошибок), SStotal — это сумма квадратов отклонения от среднего. Если регрессионная модель плохо описывает зависимость X и Y и(или) такой зависимости нет, то R ~ 0. Напротив, при максимальной зависимости R ~ 1.\n",
     "\n",
-    "$$SSres = \\sum(y_i - f(x_i)^2$$\n",
+    "$$SSres = \\sum(y_i - f(x_i))^2$$\n",
     "$$SStotal = \\sum(y_i - \\bar{y})^2$$\n",
     "\n",
     "**Скоррректированный коэффициент детерминации**\n",
