--- a/Stepik_fundamentals_of_statistics_notes_Part_2.ipynb
+++ b/Stepik_fundamentals_of_statistics_notes_Part_2.ipynb
@@ -7497,10 +7497,19 @@
     "\n",
     "<img src=\"https://raw.githubusercontent.com/betelgeus/fundamentals_of_statistics_notes/main/img/Untitled%20Diagram.jpg\"/>\n",
     "\n",
-    "Таблица: https://yatani.jp/teaching/doku.php?id=hcistats:start\n"
+    "Таблица: https://yatani.jp/teaching/doku.php?id=hcistats:start"
    ],
    "metadata": {
     "id": "mxZSByFKt5Sm"
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
